added game page, photography category
also basically killed the footer layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Nathan van den Berg
+title: Nathanael van den Berg
 email: your.email@example.tld
-description: >-
-  A portfolio showcasing my game design projects, interactive experiences,
-  and creative journey in the gaming industry.
+#description: >-
+ # A portfolio showcasing my game design projects, interactive experiences,
+ # and creative journey in the gaming industry.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amanatil.github.io" # the base hostname & protocol for your site
 #twitter_username: yourusername
 github_username: amanatil
-#linkedin_username: yourusername
+linkedin_username: nathan-van-den-berg-9616b7186
 
 # Build settings
 markdown: kramdown
@@ -26,6 +26,9 @@ collections:
   games:
     output: true
     permalink: /games/:name/
+  photography:
+    output: true
+    permalink: /photography/:name/
 
 include:
   - _pages
@@ -42,6 +45,11 @@ defaults:
       type: "games"
     values:
       layout: "game"
+  - scope:
+      path: ""
+      type: "photography"
+    values:
+      layout: "photo"
   - scope:
       path: ""
       type: "posts"
