--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A Jekyll portfolio website for a game designer with Tailwind CSS",
   "scripts": {
+    "build:css": "npx tailwindcss -i ./src/styles.css -o ./assets/css/main.css --minify",
     "build-css": "tailwindcss -i ./src/styles.css -o ./assets/css/main.css --watch",
     "build-css-prod": "tailwindcss -i ./src/styles.css -o ./assets/css/main.css --minify",
     "serve": "bundle exec jekyll serve --livereload",
